<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:padding="16dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:padding="10dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textSize="18dp"
                        android:textStyle="bold"
                        android:textColor="@color/cardLinkHeaderColor"
                        android:text="@string/primary_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:layout_marginTop="5dp"
                        android:text="@string/pl_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <Button
                        android:onClick="openPrimaryLocation"
                        android:layout_marginTop="10dp"
                        android:text="@string/full_schedule"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/defaultButtonTextColor"
                        android:background="@color/defaultButtonColor"
                        />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"

                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:padding="10dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textSize="18dp"
                        android:textStyle="bold"
                        android:textColor="@color/cardLinkHeaderColor"
                        android:text="@string/all_locations"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:layout_marginTop="5dp"
                        android:text="@string/al_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <Button
                        android:layout_marginTop="10dp"
                        android:text="@string/full_schedule"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/defaultButtonTextColor"
                        android:background="@color/defaultButtonColor"
                        />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:padding="10dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textSize="18dp"
                        android:textStyle="bold"
                        android:textColor="@color/cardLinkHeaderColor"
                        android:text="@string/gpsl_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:layout_marginTop="5dp"
                        android:text="@string/gpsl_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <Button
                        android:layout_marginTop="10dp"
                        android:text="@string/full_schedule"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/defaultButtonTextColor"
                        android:background="@color/defaultButtonColor"
                        />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:padding="10dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textSize="18dp"
                        android:textStyle="bold"
                        android:textColor="@color/cardLinkHeaderColor"
                        android:text="@string/tracked_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:layout_marginTop="5dp"
                        android:text="@string/tl_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <Button
                        android:layout_marginTop="10dp"
                        android:text="@string/full_schedule"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/defaultButtonTextColor"
                        android:background="@color/defaultButtonColor"
                        />
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>